--- a/ModelViewFramework/mainwindow.ui
+++ b/ModelViewFramework/mainwindow.ui
@@ -23,6 +23,13 @@
      <height>21</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuArquivo">
+    <property name="title">
+     <string>Arquivo</string>
+    </property>
+    <addaction name="actionAdicionarDados"/>
+   </widget>
+   <addaction name="menuArquivo"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -33,6 +40,11 @@
    </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionAdicionarDados">
+   <property name="text">
+    <string>AdicionarDados</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
